# Practicas_InfInd

Barker/: Bark.cpp  Bark.hpp  CMakeLists.txt  Manager.cpp  Manager.hpp  PrivateUserData.cpp  PrivateUserData.h  PrivateUserData.hpp  PublicUserData.cpp  PublicUserData.h  PublicUserData.hpp  Publication.cpp  Publication.hpp  Rebark.cpp  Rebark.hpp  Reply.cpp  Reply.hpp  User.cpp  User.h  main.cpp
Barker/tests/: CMakeLists.txt  test_barker_load_save_to_file.cpp  test_barker_manager_basic.cpp  test_barker_publication.cpp  test_barker_publication_integration.cpp  test_barker_user.cpp
Barker5/: CMakeLists.txt  Manager.cpp  PublicUserData.cpp  User.cpp  main.cpp
BarkerTodosLosTest/: Bark.cpp  Bark.hpp  CMakeLists.txt  Manager.cpp  Manager.hpp  PrivateUserData.cpp  PublicUserData.cpp  PublicUserData.hpp  Rebark.cpp  Rebark.hpp  Reply.cpp  Reply.hpp  User.cpp  User.hpp  main.cpp
ClaseFicheros/: main.cpp
P5/: P5.pro  display.h  general.h  input.cpp  keyboard.cpp  keyboard.h  linekeyboard.cpp  main.cpp  output.cpp  output.h  printer.h  processor.cpp  processor.h  reverse.cpp  uppercase.cpp  uppercase.h
Practica2/: point.cpp  point.h
Proyecto/: Manager.cpp  Manager.h  PrivateUserData.cpp  PrivateUserData.h  Proyecto.pro  PublicUserData.cpp  User.cpp  User.h  main.cpp  privateuserdata.cpp  privateuserdata.h  publicuserdata.cpp  publicuserdata.h  user.cpp  user.h
Prueba/: Manager.cpp  Manager.hpp  PrivateUserData.cpp  Prueba.pro  PublicUserData.hpp  User.hpp  main.cpp
build-Barker-Desktop-Default/: Barker  Barker.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
(+89 files in other folders)
